update main branch

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>local git repo </h1>
-    to we are going to creat a new repo on the git 
-    <h2>But this time we are starting from the local machine</h2>
+    <h1>main </h1>
+    
 </body>
 </html>
